*****************************************************************************************************
digiKam 5.5.0 - Release date: 2017-02-12

NEW FEATURES:


BUGFIXES FROM BUGZILLA:

001 ==> 374787 : Release Notes are difficult to read because of color choices.
002 ==> 374784 - Startup wizard displays path to album with forward slashes.
003 ==> 374771 - Thumbnails for video files are gray.
004 ==> 366010 - Main menu bar is not translated (localized).
005 ==> 328321 - Image orientation is not maintained when processing RAW image through BQM.
006 ==> 374922 - digiKam crashes when dropping ext. image into fuzzy search target area.
007 ==> 375019 - Error updating scheme from digikam 4.
008 ==> 